@@ -1,3 +1,8 @@
+2003-07-14  Mark Mitchell  <mark@codesourcery.com>
+
+	PR c++/7053
+	* g++.dg/template/friend20.C: New test.
+
 2004-12-22  Ben Elliston  <bje@au.ibm.com>
 
 	PR optimization/8328
